Small fix to wrap linked names when they become too large #fix

--- a/portfolio/src/main/resources/static/css/styles.css
+++ b/portfolio/src/main/resources/static/css/styles.css
@@ -1164,6 +1164,7 @@ section {
 #linkUsers {
     padding-left: 1.5rem;
     padding-top: 1rem;
+    word-break: break-word;
 }
 
 #linkedUsers {
